--- a/app/public/assets/css/responsive.css
+++ b/app/public/assets/css/responsive.css
@@ -5,7 +5,7 @@ Email: coderthemes@gmail.com
 File: Responsive
 */
 @import url(https://fonts.googleapis.com/css?family=Noto+Sans:400,700);
-@import url(http://fonts.googleapis.com/css?family=Roboto:400,500,700);
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,500,700);
 @media only screen and (max-width: 6000px) and (min-width: 700px) {
   .wrapper.right-bar-enabled .right-bar {
     right: 0;
