--- a/app/views/higherProcess/list.jade
+++ b/app/views/higherProcess/list.jade
@@ -1,41 +1,79 @@
 extends ../layouts/default
 block head
-    selectedUserflagChanged
-    script(type='text/javascript').
-        function selectedUserflagChanged(){
-            
-        }
+    meta(charset='utf-8')
+    meta(name='viewport', content='width=device-width,initial-scale=1')
+    meta(name='description', content='A fully featured admin theme which can be used to build CRM, CMS, etc.')
+    meta(name='author', content='Coderthemes')
+    link(rel='shortcut icon', href='assets/images/favicon_1.ico')
+    title 4-1 상위업무조회
+    link(href='/plugins/switchery/switchery.min.css', rel='stylesheet')
+    link(href='/assets/css/bootstrap.min.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/core.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/icons.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/components.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/pages.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/menu_light.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/responsive.css', rel='stylesheet', type='text/css')
+    script(src='/assets/js/modernizr.min.js')
+    // HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
+    // WARNING: Respond.js doesn't work if you view the page via file://
+    //if lt IE 9
+    script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
+    script(src='https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js')
+
+    // jQuery
+    script(src='assets/js/jquery.min.js')
+    script(src='assets/js/bootstrap.min.js')
+    script(src='assets/js/detect.js')
+    script(src='assets/js/fastclick.js')
+    script(src='assets/js/jquery.slimscroll.js')
+    script(src='assets/js/jquery.blockUI.js')
+    script(src='assets/js/waves.js')
+    script(src='assets/js/wow.min.js')
+    script(src='assets/js/jquery.nicescroll.js')
+    script(src='assets/js/jquery.scrollTo.min.js')
+    script(src='../plugins/switchery/switchery.min.js')
+    script(src='assets/js/jquery.core.js')
+    script(src='assets/js/jquery.app.js')
+
+    script(src='/vendor/jquery/jquery.min.js')
+    script(src='/isu/js/download.js')      
+
 block content
-    .content
-        .container
-            .row(style='margin-top:20px')
-                .col-xs-12.col-sm-10.col-md-8
-                    h3.masthead-brand 상위업무 > 목록
-                    hr.colorgraph      
-            br
-            .row(style='margin-left:30px;margin-top:-15px')
-                a.button.btn.btn-primary.btn-sm(href='/higherProcess/new') 추가
-                //-
-                //-.row
-                //-    .col-xs-3.col-sm-3.col-md-3
-                //-        .form-group
-                //-            select.form-control.input-sm(name='higherProcess[user_flag]')
-                //-                option(value='사용') 사용 
-                //-                option(value='미사용') 미사용
-                
-            br         
+      // ==============================================================
+      // Start right Content here
+      // ==============================================================
+      .content-page
+        // Start content
+        .content
+          .container
+            // Page-Title
             .row
-                .col-xs-12.col-sm-10.col-md-8       
-                    p.text-muted.font-13
-                        | 
-                    table.tablesaw.table.m-b-0(id='dvData' data-tablesaw-mode='swipe')
-                        thead
-                        tr
-                            th.title(scope='col', data-tablesaw-sortable-col='', data-tablesaw-priority='persist') 상위업무명
-                            th(scope='col', data-tablesaw-sortable-col='', data-tablesaw-sortable-default-col='', data-tablesaw-priority='3') 설명
-                            th(scope='col', data-tablesaw-sortable-col='', data-tablesaw-priority='2') 등록일
-                            th(scope='col', data-tablesaw-sortable-col='', data-tablesaw-priority='1') 사용여부
-                        tbody
+              .col-sm-12
+                .page-title-box
+                  ol.breadcrumb.pull-right
+                    li
+                      a(href='#') Home
+                    li
+                      a(href='#') SD 기본정보
+                    li.active 상위업무조회
+                  h4.page-title 상위업무조회
+            .row
+              .col-sm-12
+                .card-box
+                  .btn-toolbar.form-group
+                    .pull-right
+                      a.btn.btn-default.waves-effect.waves-light.m-l-5(href='/higherProcess/new')
+                        i.fa.fa-plus
+                        |  추가
+                  table.table.table-hover(id='dvData' data-tablesaw-mode='swipe')
+                    thead
+                      tr
+                        th(width='18%') 상위업무명
+                        th 설명
+                        th(width='18%') 등록일
+                        th(width='10%') 사용여부
+                    tbody
                         - if (higherProcess.length > 0) {
                             // - for( var i = 0 ; length = question.length > i ; i++ ){ //속도가 빠르다고 알고 있음.
                             - for( var i in higherProcess ){ //속도가 느리다고 알고 있음.
@@ -49,6 +87,14 @@ block content
                             tr
                                 td(colspan='5' align='center') 조회된 데이타가 없습니다.
                         - }  
-                    iframe#txtArea1(style='display:none')
+            // end row
+          // end container
+        // end content
+        footer.footer.text-right
+          | 2017 © ISU Group.
+      // ==============================================================
+      // End Right content here
+      // ==============================================================
+    // END wrapper
 
 
