--- a/app/views/higherProcess/new.jade
+++ b/app/views/higherProcess/new.jade
@@ -1,44 +1,97 @@
 extends ../layouts/default
 block head
-    
+    meta(charset='utf-8')
+    meta(name='viewport', content='width=device-width,initial-scale=1')
+    meta(name='description', content='A fully featured admin theme which can be used to build CRM, CMS, etc.')
+    meta(name='author', content='Coderthemes')
+    link(rel='shortcut icon', href='assets/images/favicon_1.ico')
+    title 4-1 상위업무조회
+    link(href='/plugins/dropzone/dist/dropzone.css', rel='stylesheet', type='text/css')
+    link(href='/plugins/summernote/dist/summernote.css', rel='stylesheet')
+    link(href='/plugins/switchery/switchery.min.css', rel='stylesheet')
+    link(href='/assets/css/bootstrap.min.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/core.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/icons.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/components.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/pages.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/menu_light.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/responsive.css', rel='stylesheet', type='text/css')
+    script(src='/assets/js/modernizr.min.js')
+    // HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
+    // WARNING: Respond.js doesn't work if you view the page via file://
+    //if lt IE 9
+    script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
+    script(src='https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js')
+
+    // postcode
+    script(src='/isu/js/postcode.js')
+    //http용
+    script(src='http://dmaps.daum.net/map_js_init/postcode.v2.js')
+                        
 block content
-    .content
-            .container
-                .row(style='margin-top:20px')
-                    .col-xs-12.col-sm-10.col-md-8
-                        h3.masthead-brand 상위업무관리
-                        hr.colorgraph
-                form.form.col-md-12.center-block(name='form' action='/higherProcess/new' method='post')        
-                    .row(style='margin-top:-15px')
-                        .col-xs-1.col-sm-1.col-md-1.col-sm-offset-7.col-md-offset-7
-                            .form-group
-                                    button.btn.btn-success.btn-sm.btn-block(type='submit') 저장
-                    .row(style='margin-left:30px')
-                        .col-xs-3.col-sm-3.col-md-3
-                            .form-group
-                                input.form-control.input-sm(type='text', name='higherProcess[higher_cd]', placeholder='상위업무코드')
-                    .row(style='margin-left:30px')
-                        .col-xs-3.col-sm-3.col-md-3
-                            .form-group
-                                input.form-control.input-sm(type='text', name='higherProcess[higher_nm]', placeholder='상위업무명')
-                    .row(style='margin-left:30px')
-                        .col-xs-3.col-sm-3.col-md-6
-                            .form-group
-                                input.form-control.input-sm(type='text', name='higherProcess[description]', placeholder='설명')
-                    .row(style='margin-left:30px')
-                        .col-xs-3.col-sm-3.col-md-3
-                            .form-group
-                                input.form-control.input-sm(type='text', name='higherProcess[com_cd]', placeholder='회사코드')
-                    .row(style='margin-left:30px')
-                        .col-xs-3.col-sm-3.col-md-3
-                            .form-group
-                                input.form-control.input-sm(type='text', name='higherProcess[sabun]', placeholder='사번')
-                    .row(style='margin-left:30px')
-                        .col-xs-3.col-sm-3.col-md-3
-                            .form-group
-                                label 사용여부
-                                select.form-control.input-sm(name='higherProcess[user_flag]')
-                                    option(value='사용' Selected) 사용 
-                                    option(value='미사용') 미사용
-                    
-                    
+      // ==============================================================
+      // Start right Content here
+      // ==============================================================
+      .content-page
+        // Start content
+        .content
+          .container
+            // Page-Title
+            .row
+              .col-sm-12
+                .page-title-box
+                  ol.breadcrumb.pull-right
+                    li
+                      a(href='#') Home
+                    li
+                      a(href='#') SD기본정보
+                    li.active 상위업무입력
+                  h4.page-title 상위업무입력
+            .row
+              .col-sm-12
+                .card-box
+                  .p-20
+                    form.form-horizontal.group-border-dashed(name='form' action='/higherProcess/new' method='post')
+                      .form-group
+                        label.col-sm-3.control-label 상위업무코드
+                        .col-sm-3
+                          input.form-control(type='text', name='higherProcess[higher_cd]', placeholder='')
+                      .form-group
+                        label.col-sm-3.control-label 상위업무명
+                        .col-sm-3
+                          input.form-control(type='text', name='higherProcess[higher_nm]', placeholder='')
+                      .form-group
+                        label.col-sm-3.control-label 설명
+                        .col-sm-3
+                          input.form-control(type='text', name='higherProcess[description]', placeholder='')
+                      .form-group
+                        label.col-sm-3.control-label 회사코드
+                        .col-sm-3
+                          input.form-control(type='text', name='higherProcess[com_cd]', placeholder='')
+                      .form-group
+                        label.col-sm-3.control-label 사번
+                        .col-sm-3
+                          input.form-control(type='text', name='higherProcess[sabun]', placeholder='')
+                      .form-group
+                        label.col-sm-3.control-label 사용여부
+                        .col-sm-3
+                          select.form-control.input-sm(name='higherProcess[user_flag]')
+                            option(value='사용' Selected) 사용 
+                            option(value='미사용') 미사용
+                      .form-group
+                        .col-sm-offset-3.col-sm-9.m-t-30
+                          button.btn.btn-primary.waves-effect.waves-light(type='submit')
+                            | 저장 
+                            i.fa.fa-send.m-l-10
+                          button.btn.btn-default.waves-effect.m-l-5(type='reset') 취소
+            // end row
+          // end container
+        // end content
+        footer.footer.text-right
+          | 2017 © ISU Group.
+      // ==============================================================
+      // End Right content here
+      // ==============================================================
+    // END wrapper
+    
+
