--- a/app/views/search/viewall.jade
+++ b/app/views/search/viewall.jade
@@ -66,7 +66,9 @@ block head
     script(src='../plugins/summernote/dist/summernote.min.js')
     script(src='assets/js/jquery.core.js')
     script(src='assets/js/jquery.app.js')
+    script(src='/vendor/jquery/jquery.min.js')
 
+    
     script.
       jQuery(document).ready(function() {
         alert(tVal);  
