--- a/app/views/incident/index.jade
+++ b/app/views/incident/index.jade
@@ -1,11 +1,18 @@
 extends ../layouts/default
 block head
-    meta(charset='utf-8')
-    meta(name='viewport', content='width=device-width,initial-scale=1')
-    meta(name='description', content='A fully featured admin theme which can be used to build CRM, CMS, etc.')
-    meta(name='author', content='Coderthemes')
-    link(rel='shortcut icon', href='assets/images/favicon_1.ico')
-    title 4-3 회사정보 입력
+
+    title  1-2 처리진행현황 목록
+    // Plugins css
+    link(href='/plugins/bootstrap-tagsinput/dist/bootstrap-tagsinput.css', rel='stylesheet')
+    link(href='/plugins/multiselect/css/multi-select.css', rel='stylesheet', type='text/css')
+    link(href='/plugins/select2/select2.css', rel='stylesheet', type='text/css')
+    link(href='/plugins/bootstrap-touchspin/dist/jquery.bootstrap-touchspin.min.css', rel='stylesheet')
+    link(href='/plugins/timepicker/bootstrap-timepicker.min.css', rel='stylesheet')
+    link(href='/plugins/mjolnic-bootstrap-colorpicker/dist/css/bootstrap-colorpicker.min.css', rel='stylesheet')
+    link(href='/plugins/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css', rel='stylesheet')
+    link(href='/plugins/bootstrap-daterangepicker/daterangepicker.css', rel='stylesheet')
+    // summernot
+    link(href='/plugins/summernote/dist/summernote.css', rel='stylesheet')
     link(href='/plugins/switchery/switchery.min.css', rel='stylesheet')
     link(href='/assets/css/bootstrap.min.css', rel='stylesheet', type='text/css')
     link(href='/assets/css/core.css', rel='stylesheet', type='text/css')
@@ -21,23 +28,41 @@ block head
     script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
     script(src='https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js')
 
-    // jQuery
-    script(src='assets/js/jquery.min.js')
-    script(src='assets/js/bootstrap.min.js')
-    script(src='assets/js/detect.js')
-    script(src='assets/js/fastclick.js')
-    script(src='assets/js/jquery.slimscroll.js')
-    script(src='assets/js/jquery.blockUI.js')
-    script(src='assets/js/waves.js')
-    script(src='assets/js/wow.min.js')
-    script(src='assets/js/jquery.nicescroll.js')
-    script(src='assets/js/jquery.scrollTo.min.js')
-    script(src='../plugins/switchery/switchery.min.js')
-    script(src='assets/js/jquery.core.js')
-    script(src='assets/js/jquery.app.js')
-
-    script(src='/vendor/jquery/jquery.min.js')
-    script(src='/views/incident/index.js')      
+    script(src='/assets/js/jquery.min.js')
+    script(src='/assets/js/bootstrap.min.js')
+    script(src='/assets/js/detect.js')
+    script(src='/assets/js/fastclick.js')
+    script(src='/assets/js/jquery.slimscroll.js')
+    script(src='/assets/js/jquery.blockUI.js')
+    script(src='/assets/js/waves.js')
+    script(src='/assets/js/wow.min.js')
+    script(src='/assets/js/jquery.nicescroll.js')
+    script(src='/assets/js/jquery.scrollTo.min.js')
+    script(src='/plugins/switchery/switchery.min.js')
+    script(src='/plugins/bootstrap-tagsinput/dist/bootstrap-tagsinput.min.js')
+    script(type='text/javascript', src='/plugins/multiselect/js/jquery.multi-select.js')
+    script(type='text/javascript', src='/plugins/jquery-quicksearch/jquery.quicksearch.js')
+    script(src='/plugins/select2/select2.min.js', type='text/javascript')
+    script(src='/plugins/bootstrap-touchspin/dist/jquery.bootstrap-touchspin.min.js', type='text/javascript')
+    script(src='/plugins/bootstrap-inputmask/bootstrap-inputmask.min.js', type='text/javascript')
+    script(src='/assets/js/jquery.core.js')
+    script(src='/assets/js/jquery.app.js')
+    
+    script(src='/plugins/dotdotdot/jquery.dotdotdot.min.js')
+    script.
+      $(document).ready(function (){
+        $(".truncate").dotdotdot({
+            watch: 'window'
+        });
+        $(".truncate1").dotdotdot({
+            watch: 'window',
+            ellipsis: ' ... '
+        });
+        $(".truncate2").dotdotdot({
+            watch: 'window',
+            wrap: 'letter'
+        });
+      });
 
 block content
       // ==============================================================
@@ -58,40 +83,150 @@ block content
                       a(href='#') 문의 및 담당자
                     li.active 처리진행현황
                   h4.page-title 처리진행현황 목록
+            // start Search Area
             .row
-              .col-sm-12
+              .col-lg-12
                 .card-box
-                  .btn-toolbar.form-group
-                    .pull-right
-                      a.btn.btn-default.waves-effect.waves-light.m-l-5(href='/incident/new/문의하기')
-                        i.fa.fa-pencil
-                        |  문의
-                  table.table.table-hover(id='dvData' data-tablesaw-mode='swipe')
-                    thead
-                      tr
-                        th 제목
-                        th(width='15%') 등록일
-                        th(width='13%') 요청경로
-                        th(width='15%') 진행구분
-                        th(width='10%') 담당자
-                        th(width='15%') 접수(완료)일
-                    tbody
-                        - if (incident.length > 0) {
-                            // - for( var i = 0 ; length = question.length > i ; i++ ){ //속도가 빠르다고 알고 있음.
-                            - for( var i in incident ){ //속도가 느리다고 알고 있음.
-                                tr(onclick="onclick=location.href='/incident/#{incident[i]._id}/show'")
-                                    td  #{incident[i].title}  
-                                    td.highlight(data-highlight='search.highlight.title') #{incident[i].createdAt}
-                                    td #{incident[i].course_flag}
-                                    td #{incident[i].process_flag}
-                                    td #{incident[i].manager_sabun}
-                                    td #{incident[i].complete_date}
-                            - }
-                        - }else{
-                            tr
-                                td(colspan='5' align='center') 조회된 데이타가 없습니다.
-                        - }  
-            // end row
+                  form.form-horizontal.group-border-dashed(action='#')
+                    .form-group
+                      label.col-sm-2.control-label 진행구분
+                      .col-sm-2
+                        select.form-control
+                          option 전체
+                          option 접수대기
+                          option 결제처리중
+                          option 처리중
+                          option 미평가
+                          option 완료
+                      label.col-sm-2.control-label 검색기간
+                      .col-sm-2
+                        select.form-control
+                          option 최근1주일
+                          option 최근1개월
+                          option 최근3개월
+                          option 최근6개월
+                          option 최근1년
+                          option 전체검색
+                    .form-group.m-b-0
+                      label.col-sm-2.control-label 제목
+                      .col-sm-8
+                        input.form-control(type='text')
+                      .col-sm-2
+                        button.btn.btn-primary(type='button')
+                          | 조회 
+                          i.fa.fa-search.m-l-5
+            // end Search Area
+            // start List Area
+            .row
+              .col-lg-12
+                .card-box
+                  // start 처리진행현황
+                  .forum-container
+                    .forum-item
+                      .row
+                        .col-md-1.forum-info
+                          span.btn-outline.outline-pink
+                            | 접수
+                        .col-md-11
+                          .forum-sub-title
+                            span.text-primary
+                              b 이수시스템
+                            span.p-w-xs  2017-09-14 09:23
+                          a.forum-item-title(href='gw_sub1_2_view01.html')
+                            i.md.md-desktop-windows
+                            | 중국에서 발송한 메일 확인 요청
+                        .col-md-12
+                          .forum-content.truncate1.fh-60
+                            a(href='gw_sub1_2_view01.html')
+                              | 이수그룹 계열사 중 토다이수 가 있습니다.토다이수 중국 동관이수에 근무하고 있는 사용자 중 다음과 같은 메일을 수신받았다고 합니다.
+                              | 메일 내용은,메일 용량을 15G로 업그레이드 하지 않으면, 24시간으로 사용 금지되며, 모든 연락처와 메일이 삭제된다는 내용(?) 이라고 합니다.
+                              | 어떤 조치를 해야할지 검토 부탁드립니다.
+                              | 이수그룹 계열사 중 토다이수 가 있습니다.토다이수 중국 동관이수에 근무하고 있는 사용자 중 다음과 같은 메일을 수신받았다고 합니다.
+                              | 메일 내용은,메일 용량을 15G로 업그레이드 하지 않으면, 24시간으로 사용 금지되며, 모든 연락처와 메일이 삭제된다는 내용(?) 이라고 합니다.
+                              | 어떤 조치를 해야할지 검토 부탁드립니다.
+                          a.text-muted.text-more(href='gw_sub1_2_view01.html') 더보기
+                          .forum-level
+                            p.text-muted.font-13
+                              b 서비스 만족도:
+                              span.m-l-15
+                                i.md.md-star.text-warning
+                                i.md.md-star.text-warning
+                                i.md.md-star.text-warning
+                                i.md.md-star.text-warning
+                                i.md.md-star.text-muted
+                            p
+                    // end content
+                    .forum-item
+                      .row
+                        .col-md-1.forum-info
+                          span.btn-outline.outline-primary
+                            | 진행
+                        .col-md-11
+                          .forum-sub-title
+                            span.text-primary
+                              b 이수시스템
+                            span.p-w-xs  2017-09-14 09:23
+                          a.forum-item-title(href='gw_sub1_2_view01.html')
+                            i.md.md-desktop-windows
+                            | 중국에서 발송한 메일 확인 요청
+                        .col-md-12
+                          .forum-content.truncate1.fh-60
+                            a(href='gw_sub1_2_view01.html')
+                              | 이수그룹 계열사 중 토다이수 가 있습니다.토다이수 중국 동관이수에 근무하고 있는 사용자 중 다음과 같은 메일을 수신받았다고 합니다.
+                              | 메일 내용은,메일 용량을 15G로 업그레이드 하지 않으면, 24시간으로 사용 금지되며, 모든 연락처와 메일이 삭제된다는 내용(?) 이라고 합니다.
+                              | 어떤 조치를 해야할지 검토 부탁드립니다.
+                              | 이수그룹 계열사 중 토다이수 가 있습니다.토다이수 중국 동관이수에 근무하고 있는 사용자 중 다음과 같은 메일을 수신받았다고 합니다.
+                              | 메일 내용은,메일 용량을 15G로 업그레이드 하지 않으면, 24시간으로 사용 금지되며, 모든 연락처와 메일이 삭제된다는 내용(?) 이라고 합니다.
+                              | 어떤 조치를 해야할지 검토 부탁드립니다.
+                          a.text-muted.text-more(href='gw_sub1_2_view01.html') 더보기
+                          .forum-level
+                            p.text-muted.font-13
+                              b 서비스 만족도:
+                              span.m-l-15
+                                i.md.md-star.text-warning
+                                i.md.md-star.text-warning
+                                i.md.md-star.text-warning
+                                i.md.md-star.text-warning
+                                i.md.md-star.text-muted
+                            p
+                    // end content
+                    .forum-item
+                      .row
+                        .col-md-1.forum-info
+                          span.btn-outline.outline-inverse
+                            | 완료
+                        .col-md-11
+                          .forum-sub-title
+                            span.text-primary
+                              b 이수시스템
+                            span.p-w-xs  2017-09-14 09:23
+                          a.forum-item-title(href='gw_sub1_2_view01.html')
+                            i.md.md-desktop-windows
+                            | 중국에서 발송한 메일 확인 요청
+                        .col-md-12
+                          .forum-content.truncate1.fh-60
+                            a(href='gw_sub1_2_view01.html')
+                              | 이수그룹 계열사 중 토다이수 가 있습니다.토다이수 중국 동관이수에 근무하고 있는 사용자 중 다음과 같은 메일을 수신받았다고 합니다.
+                              | 메일 내용은,메일 용량을 15G로 업그레이드 하지 않으면, 24시간으로 사용 금지되며, 모든 연락처와 메일이 삭제된다는 내용(?) 이라고 합니다.
+                              | 어떤 조치를 해야할지 검토 부탁드립니다.
+                              | 이수그룹 계열사 중 토다이수 가 있습니다.토다이수 중국 동관이수에 근무하고 있는 사용자 중 다음과 같은 메일을 수신받았다고 합니다.
+                              | 메일 내용은,메일 용량을 15G로 업그레이드 하지 않으면, 24시간으로 사용 금지되며, 모든 연락처와 메일이 삭제된다는 내용(?) 이라고 합니다.
+                              | 어떤 조치를 해야할지 검토 부탁드립니다.
+                          a.text-muted.text-more(href='gw_sub1_2_view01.html') 더보기
+                          .forum-level
+                            p.text-muted.font-13
+                              b 서비스 만족도:
+                              span.m-l-15
+                                i.md.md-star.text-warning
+                                i.md.md-star.text-warning
+                                i.md.md-star.text-warning
+                                i.md.md-star.text-warning
+                                i.md.md-star.text-muted
+                            p
+                    // end content
+                  // end 처리진행현황
+                // end card-box
+            // end List Area
           // end container
         // end content
         footer.footer.text-right
