--- a/app/public/assets/less/variables.less
+++ b/app/public/assets/less/variables.less
@@ -1,7 +1,7 @@
 
 //Google Fonts
 @import url(https://fonts.googleapis.com/css?family=Noto+Sans:400,700);
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,500,700);
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,500,700);
 
 // Color variables
 @white: #ffffff;
