--- a/app/views/incident/index.jade
+++ b/app/views/incident/index.jade
@@ -42,6 +42,10 @@ block head
     script(src='/plugins/select2/select2.min.js', type='text/javascript')
     script(src='/plugins/bootstrap-touchspin/dist/jquery.bootstrap-touchspin.min.js', type='text/javascript')
     script(src='/plugins/bootstrap-inputmask/bootstrap-inputmask.min.js', type='text/javascript')
+
+    script(src='/assets/js/jquery.core.js')
+    script(src='/assets/js/jquery.app.js')
+    script(src='/vendor/jquery/jquery.min.js')
     
 block content
       // ==============================================================
