--- a/app/views/incident/viewDetail.jade
+++ b/app/views/incident/viewDetail.jade
@@ -47,6 +47,7 @@ block head
     script(src='/plugins/bootstrap-inputmask/bootstrap-inputmask.min.js', type='text/javascript')
     script(src='/assets/js/jquery.core.js')
     script(src='/assets/js/jquery.app.js')
+    script(src='/vendor/jquery/jquery.min.js')
 
 
 block content
@@ -160,7 +161,7 @@ block content
                           b 조치내용
                         hr
                         p
-                          | 안녕하세요. ㈜나라비전 윤은정입니다. 
+                          | 안녕하세요. 이수시스템 박선우입니다. 
                           br
                           br
                           | 외부에서 수신된 정상 메일이기 때문에 특별히 조치를 사항이 없습니다. 
